--- a/src/app/hopdong/hopdong.component.html
+++ b/src/app/hopdong/hopdong.component.html
@@ -64,7 +64,7 @@
         <span style="line-height: 1.5">Bên A đồng ý thuê bên B thực hiện hiệu ứng kỹ xảo khói lửa, khói lạnh nghệ thuật
             thực hiện trong chương
             trình “HỘI THI VĂN HOÁ VIETCOMBANK DƯỚI ÁNH SÁNG TƯ TƯỞNG HỒ CHÍ MINH”</span><br>
-        <span style="line-height: 1.5"><b>Giá trị hợp đồng: 27.280.000</b></span><br>
+        <span style="line-height: 1.5"><b>Giá trị hợp đồng: {{ tongAll }}</b></span><br>
         <span style="line-height: 1.5"><i>(Bằng chữ: Hai mươi bảy triệu hai trăm tám mươi nghìn đồng ./. )</i></span>
         <br>
         <div class="table" style="border-collapse: collapse;text-align: center;">
@@ -87,15 +87,15 @@
                 </tr>
                 <tr>
                     <td colspan="5" style="text-align: center;"><b>Tổng</b></td>
-                    <td style="text-align: center;"><b>24.800.000</b></td>
+                    <td style="text-align: center;"><b>{{ tong }}</b></td>
                 </tr>
                 <tr>
                     <td colspan="5" style="text-align: center;"><b>VAT</b></td>
-                    <td style="text-align: center;"><b>2.480.000</b></td>
+                    <td style="text-align: center;"><b>{{ vat }}</b></td>
                 </tr>
                 <tr>
                     <td colspan="5" style="text-align: center;"><b>Tổng giá trị hợp đồng</b></td>
-                    <td style="text-align: center;"><b>20000000</b></td>
+                    <td style="text-align: center;"><b>{{ tongAll}}</b></td>
                 </tr>
 
             </table>
@@ -194,11 +194,12 @@
 
 
 
-        <div class="row text-center mt-5">
-            <div class="col-6"><strong>ĐẠI DIỆN BÊN A</strong></div>
-            <div class="col-6"><strong> ĐẠI DIỆN BÊN B</strong></div>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>ĐẠI DIỆN BÊN A</span>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span> ĐẠI DIỆN BÊN B</span>
 
-        </div>
+
 
 
         <br>
@@ -206,11 +207,11 @@
         <br>
         <br>
 
-        <div class="row text-center">
-            <div class="col-6"><strong>LÊ THỊ TRÚC QUỲNH</strong></div>
-            <div class="col-6"><strong> BÙI ANH DUY</strong></div>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>LÊ THỊ TRÚC QUỲNH</strong>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  <strong> BÙI ANH DUY</strong>
 
-        </div>
 
     <br>
     <br>
