--- a/src/app/hopdong/popup/hopdong.popup.html
+++ b/src/app/hopdong/popup/hopdong.popup.html
@@ -62,7 +62,7 @@
                     <td *ngIf="openCreate">{{ addData.ThanhTien }}</td>
                     
                     <td *ngIf="openCreate"> <button mat-raised-button color="primary" (click)="Them()">Them</button>
-                        <button mat-raised-button color="info" (click)="Sua()">Sửa</button></td>
+                        <!-- <button mat-raised-button color="info" (click)="Sua()">Sửa</button></td> -->
                
             </tbody>
         </table>
