--- a/src/app/hopdong/popup/hopdong.popup.html
+++ b/src/app/hopdong/popup/hopdong.popup.html
@@ -1,7 +1,19 @@
 <div class="row">
-    <div class="col-4">
-        <form class="text-center" autocomplete="off">
 
+    <div class="col-3">
+
+        <form class="text-center" autocomplete="off">
+            <mat-form-field appearance="fill">
+                <mat-label>Nhập số điện thoại</mat-label>
+                <mat-select>
+                    <mat-form-field appearance="outline" style="margin: auto;width:96%">
+                        <mat-label>Số điện thoại</mat-label>
+                        <input matInput [(ngModel)]="seacrh.dienThoai" name="search">
+                    </mat-form-field>
+                    <mat-option *ngFor="let state of dsKhachHang | filterBy: seacrh" [value]="state"
+                        (click)="Select(state)">{{state.benA}}</mat-option>
+                </mat-select>
+            </mat-form-field>
             <mat-form-field appearance="fill">
                 <mat-label>Tên bên A</mat-label>
                 <input matInput [(ngModel)]="ob.data.benA" name="bena" required>
@@ -27,53 +39,119 @@
                 <input matInput [(ngModel)]="ob.data.daiDienA" name="daidien" required>
             </mat-form-field>
             <br>
-
-            <button mat-raised-button color="primary" (click)="Close()">OK</button>
+            <section style="margin-left: 10px;float: left;">
+                <label>Giới tính:</label>
+                <mat-radio-group [(ngModel)]="ob.data.gioiTinh" name="gioitinh">
+                    <mat-radio-button value="1">Nam </mat-radio-button>
+                    <mat-radio-button value="0"> Nữ</mat-radio-button>
+                </mat-radio-group>
+            </section>
+            <mat-form-field appearance="fill">
+                <mat-label>Chức vụ</mat-label>
+                <input matInput [(ngModel)]="ob.data.chucVu" name="cv" required>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+                <mat-label>Địa điểm thực hiện</mat-label>
+                <textarea matInput [(ngModel)]="ob.data.diaDiem" name="diadiem1" required rows="3"></textarea>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+                <mat-label>Choose a date</mat-label>
+                <input matInput [matDatepicker]="picker" [(ngModel)]="ob.data.timeThucHien" name="time">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+            <mat-form-field appearance="fill">
+                <mat-label>Thời gian lắp đặt</mat-label>
+                <input matInput [(ngModel)]="ob.data.timeLapDat" name="ms1t" required>
+            </mat-form-field>
         </form>
     </div>
-    <div class="col-8">
-        <table class="table">
+    <div class="col-9">
+        <mat-form-field appearance="fill">
+            <mat-label>Hạng mục</mat-label>
+            <mat-select>
+                <mat-form-field appearance="outline" style="margin: auto;width:96%">
+                    <mat-label>Hạng mục</mat-label>
+                    <input matInput [(ngModel)]="seacrh1.hangMuc" name="search1">
+                </mat-form-field>
+                <mat-option *ngFor="let state of dsDanhMuc | filterBy: seacrh1" [value]="state"
+                    (click)="SelectHM(state)">{{state.hangMuc}}</mat-option>
+            </mat-select>
+        </mat-form-field>
+        <table class="table table-hover" style="text-align: center;">
             <thead>
                 <tr>
                     <th scope="col" style="width: 10%;">STT</th>
-                    <th scope="col">Hạng mục</th>
+                    <th scope="col" style="width: 30%;">Hạng mục</th>
                     <th scope="col">ĐVT</th>
                     <th scope="col">Đơn giá</th>
-                    <th scope="col">Số lượng</th>
+                    <th scope="col" style="width: 10%;">Số lượng</th>
                     <th scope="col">Thành Tiền</th>
-                    <th>Thao tác</th>
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let item of ob.table" >
-                    <td class="{{item.Stt}}label"><input type="text" class="form-control" [(ngModel)]="item.Stt">{{item.Stt}}</td>
-                    <td class="{{item.Stt}}label"><input type="text" class="form-control" [(ngModel)]="item.HangMuc">{{item.HangMuc}}</td>         
-                    <td class="{{item.Stt}}label"><input type="text" class="form-control" [(ngModel)]="item.Dvt">{{item.Dvt}}</td>
-                    <td class="{{item.Stt}}label"><input type="text" class="form-control" [(ngModel)]="item.HangMuc">{{item.DonGia}}</td>
-                    <td class="{{item.Stt}}label"><input type="text" class="form-control" [(ngModel)]="item.SoLuong">{{item.SoLuong}}</td>
-                    <td class="{{item.Stt}}label"><input type="text" class="form-control" [(ngModel)]="item.ThanhTien">{{item.ThanhTien}}</td>
+                <tr *ngFor="let item of ob.table; index as i">
+                    <td>{{i + 1}} <button mat-mini-fab color="warn"
+                        (click)="Xoa(item)"><span class="material-icons">
+                            clear
+                        </span></button></td>
+
+                    <td>{{item.HangMuc}}</td>
+                    <td>{{item.Dvt}}</td>
+                    <td>{{item.DonGia | tiente}}</td>
+                    <td>{{item.SoLuong}}</td>
+                    <td>{{item.ThanhTien | tiente}}
+                    </td>
+
                 </tr>
-                    <!-- edit  -->
-                    <td *ngIf="openCreate"><input type="number" class="form-control" disabled [(ngModel)]="addData.Stt"></td>
-                    <td *ngIf="openCreate"><input type="text" class="form-control" [(ngModel)]="addData.HangMuc"></td>
-                    <td *ngIf="openCreate"><input type="text" class="form-control" [(ngModel)]="addData.Dvt"></td>
-                    <td *ngIf="openCreate"> <input type="number" class="form-control" [(ngModel)]="addData.DonGia"></td>
-                    <td *ngIf="openCreate"><input type="number" class="form-control" [(ngModel)]="addData.SoLuong" (change)="Auto()"></td>
-                    <td *ngIf="openCreate">{{ addData.ThanhTien }}</td>
-                    
-                    <td *ngIf="openCreate"> <button mat-raised-button color="primary" (click)="Them()">Them</button>
-                        <!-- <button mat-raised-button color="info" (click)="Sua()">Sửa</button></td> -->
-               
+
+                <tr>
+                    <td><input type="text" class="form-control" [(ngModel)]="addData.Stt"></td>
+                    <td><input type="text" class="form-control" [(ngModel)]="addData.HangMuc" placeholder="Hạng mục">
+                    </td>
+                    <td><input type="text" class="form-control" [(ngModel)]="addData.Dvt" placeholder="Đơn vị tính">
+                    </td>
+                    <td style="position: relative;" class="dongia"><input type="number" class="form-control" [(ngModel)]="addData.DonGia" placeholder="Đơn giá" (change)="Auto()">
+                        <span style="position: absolute;left: -20px;top: 65px;" class="tienchu">{{ showTienChu }}</span>
+                    </td>
+                    <td><input type="number" class="form-control" [(ngModel)]="addData.SoLuong" placeholder="Số lượng"
+                            (change)="Auto()"></td>
+                    <td><input type="number" disabled class="form-control" [(ngModel)]="addData.ThanhTien"
+                            placeholder="Thành tiền"> </td>
+
+                </tr>
             </tbody>
+
         </table>
-        <button mat-raised-button color="primary" (click)="AddRow()">Thêm</button>
+        <div class="row">
+            <div class="col-2 mt-3"> <button mat-stroked-button color="primary" (click)="Them()">Thêm hạng mục</button>
+            </div>
+        </div>
+
+
     </div>
+    <button mat-raised-button color="primary" class="xacnhan" (click)="Close()">Hoàn thành</button>
 </div>
 
 <style>
     mat-form-field {
         width: 90%;
-        margin: 5px;
-        font-size: 12pt;
+        margin: 2px;
+        font-size: 10pt;
+    }
+
+    .xacnhan {
+        margin: auto;
+        position: absolute;
+        bottom: 5%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
+
+    .dongia input:focus ~  .tienchu{
+        display: block;
+    }
+    .tienchu{
+        display: none;
     }
 </style>
