--- a/src/app/hopdong/hopdong.component.css
+++ b/src/app/hopdong/hopdong.component.css
@@ -18,7 +18,6 @@ pre{
     letter-spacing: 0.1;
     word-spacing: 1px;
 
-    
 }
 .a4 {
     /* margin: auto; */
@@ -62,3 +61,7 @@ th {
 }
 
 table {}
+
+.dieu3{
+    text-align: justify;
+}
