--- a/src/app/hopdong/popup/hopdong.popup.html
+++ b/src/app/hopdong/popup/hopdong.popup.html
@@ -123,8 +123,8 @@
             </tbody>
 
         </table>
-        <div class="row">
-            <div class="col-2 mt-3"> <button mat-stroked-button color="primary" (click)="Them()">Thêm hạng mục</button>
+        <div class="row" style="float: right;">
+            <div class="col-2 mt-3 float-right"> <button mat-stroked-button color="primary" (click)="Them()">Thêm hạng mục</button>
             </div>
         </div>
 
