--- a/src/app/hopdong/hopdong.component.html
+++ b/src/app/hopdong/hopdong.component.html
@@ -216,7 +216,7 @@
     <br>
     <br>
     <div class="row ten" style="text-align: center;">
-        <div class="col-6 a03">  <strong>THỊ TRÚC QUỲNH</strong></div>
+        <div class="col-6 a03">  <strong>{{data.value.daiDienA}}</strong></div>
         <div class="col-6 a04">  <strong>BÙI ANH DUY</strong></div>
     </div>
 
