--- a/src/app/hopdong/popup/hopdong.popup.html
+++ b/src/app/hopdong/popup/hopdong.popup.html
@@ -114,7 +114,7 @@
                     <td style="position: relative;" class="dongia"><input type="number" class="form-control" [(ngModel)]="addData.DonGia" placeholder="Đơn giá" (keyup)="Auto()">
                         <span *ngIf="showTienChu" style="position: absolute;left: -20px;top: 65px;" class="tienchu">{{ showTienChu + 'đồng' }}</span>
                     </td>
-                    <td><input type="number" class="form-control" [(ngModel)]="addData.SoLuong" placeholder="Số lượng"
+                    <td><input type="number" min="0" class="form-control" [(ngModel)]="addData.SoLuong" placeholder="Số lượng"
                             (change)="Auto()"></td>
                     <td><input type="number" disabled class="form-control" [(ngModel)]="addData.ThanhTien"
                             placeholder="Thành tiền"> </td>
