--- a/src/app/hopdong/hopdong.component.css
+++ b/src/app/hopdong/hopdong.component.css
@@ -5,6 +5,12 @@ body {
     font-family: "Times New Roman", Times, serif;
     width: 100%;
 }
+.menu{
+  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 10px;
+  padding: 30px 20px;
+  text-align: center;
+}
 span{
     /* letter-spacing: 0.5px;
     word-spacing: 21px;
