--- a/src/app/hopdong/hopdong.component.html
+++ b/src/app/hopdong/hopdong.component.html
@@ -3,6 +3,8 @@
   <button (click)="Export2Doc('a4', 'hop-dong');" class="btn btn-success">DOWNLOAD</button><br><br>
 
   <button mat-raised-button color="primary" (click)="OpenPopup()">Nhập dữ liệu</button>
+  <button mat-raised-button color="warn" (click)="OpenQL()">Quản lý</button>
+
 </div>
 <div id="printdiv" #myDiv>
   <div class="a4" style="margin: auto;">
